first layout styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     Steering wheel. Yeah, gloves and steering wheel... Somebody tell him to give it to me... COME ON! MOVE!
-    <div class="container container--outer">
+    <div class="container container--outer hero">
         <div class="container container--inner"></div>
     </div>
-    <div class="container container--outer">
+    <div class="container container--outer what">
         <div class="container container--inner"></div>
     </div>
-    <div class="container container--outer">
+    <div class="container container--outer how">
         <div class="container container--inner"></div>
     </div>
-    <div class="container container--outer">
+    <div class="container container--outer signup">
         <div class="container container--inner"></div>
     </div>
 </body>
